Punto de control: Se actualiza README y notebook de la clase.

--- a/src/elementos_de_programacion.ipynb
+++ b/src/elementos_de_programacion.ipynb
@@ -138,15 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chicos de ambientalesvan a ser hackers de python\n",
-      "Chicos de ambientales van a ser hackers de python\n"
+      "Chicos de ambientalesvan a ser hackers de python\n"
      ]
     }
    ],
@@ -154,9 +153,25 @@
     "cadena_1 = \"Chicos de ambientales\"\n",
     "cadena_2 = \"van a ser hackers de python\"\n",
     "resultado = cadena_1 + cadena_2\n",
-    "print(resultado)\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chicos de ambientales van a ser hackers de python\n"
+     ]
+    }
+   ],
+   "source": [
     "resultado = cadena_1 + \" \" + cadena_2\n",
-    "print(resultado)\n"
+    "print(resultado)"
    ]
   },
   {
@@ -273,13 +288,15 @@
     "\n",
     "Los tipos de datos primitivos son los tipos de datos más básicos que ofrece un lenguaje de programación. Son indivisibles y solo pueden almacenar un único valor. Los tipos de datos primitivos más comunes incluyen:\n",
     "| Categoría | Tipo de Dato | Descripción | Ejemplos |\n",
-    "| :---: | :---: | :---: | :---: |\n",
-    "| Tipo Numérico | Entero | Números enteros positivos, negativos o cero. | ```1, -10, 0, 200``` |\n",
-    "| Tipo Numérico | Float | Números de punto flotante. | ```3.1416, -5.2, 10.0, 0.33``` |\n",
+    "| :---: | :---: | :--- | :---: |\n",
+    "| Tipo Numérico | Entero | Números enteros positivos, negativos o cero. Comprende un rango de valores aproximadamente de -9,223,372,036,854,775,808 a 9,223,372,036,854,775,807. | ```1, -10, 0, 200``` |\n",
+    "| Tipo Numérico | Float | Números de punto flotante. Comprende un rango de valores aproximadamente de ±1.79769313486231570E+308 (precisión de 15-16 dígitos decimales). | ```3.1416, -5.2, 10.0, 0.33``` |\n",
     "| Tipo Numérico | Complejo | Números complejos. | ```4+3i, 8i``` |\n",
     "| Tipo Texto | Carácter | Representan un único símbolo o letra. | ```'a', 'B', '$'``` |\n",
     "| Tipo Texto | Cadena de Texto | Secuencias de caracteres. | ```\"Hola mundo\", \"Python es genial\", \"42\"``` |\n",
     "| Tipo booleano | Booleano | Valores de verdad o falso. | ```True, False``` |\n",
+    "\n",
+    "Aquí pueden informarse más acerca de los [números de punto flotante.](http://puntoflotante.org/formats/fp/)\n",
     "\n",
     "2. Tipos de datos estructurados (los veremos más adelante)."
    ]
@@ -411,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +438,7 @@
     "# Declaración de una variable decimal\n",
     "mi_variable_decimal: float\n",
     "\n",
-    "# Declaración de una variable de caracter o cadena de caracteres\n",
+    "# Declaración de una variable de una cadena de caracteres\n",
     "mi_variable_cadena_char: str\n",
     "\n",
     "# Declaración de una variable booleana\n",
@@ -439,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +470,7 @@
     "mi_variable_cadena_char = \"Hola chicos de ambientales\"\n",
     "\n",
     "# Asignación de un valor a la variable booleana\n",
-    "mi_variable_booleana = True\n"
+    "mi_variable_booleana = True"
    ]
   },
   {
@@ -515,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +578,7 @@
     "    variable_3 = \"Variable 3: tengo alcance solo dentro de la función fun_3\"\n",
     "\n",
     "    print(\"\\t\" + variable_3)\n",
-    "    print(\"\\t\" + variable_1 + \" y también dentro de la función fun_3.\")\n",
+    "    print(\"\\t\" + variable_1 + \" También dentro de la función fun_3.\")\n",
     "\n",
     "    try:\n",
     "        print(variable_4)\n",
@@ -583,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +609,7 @@
      "text": [
       "Estamos dentro de la función fun_3:\n",
       "\tVariable 3: tengo alcance solo dentro de la función fun_3\n",
-      "\tVariable 1: tengo alcance global. y también dentro de la función fun_3.\n",
+      "\tVariable 1: tengo alcance global. También dentro de la función fun_3.\n",
       "variable_4 no está al alcance, posiblemente no definida.\n",
       "\tEstamos dentro de la función fun_4:\n",
       "\t\tVariable 4: tengo alcance solo dentro de la función fun_4.\n",
@@ -631,6 +648,12 @@
     "y para nombre de archivos:\n",
     "```\n",
     "mi_primer_programa_en_python.py\n",
+    "```\n",
+    "\n",
+    "Las constantes en python (también en otros lenguajes de programación) se escriben en mayúsculas usando la convención **snake_case**. Por ejemplo:\n",
+    "```python\n",
+    "    PI = 3.1416\n",
+    "    GRAVEDAD = 9.81\n",
     "```"
    ]
   },
@@ -658,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +690,7 @@
        "48.75"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
