Punto de control: Se actualiza las notas del curso.

--- a/src/elementos_de_programacion.ipynb
+++ b/src/elementos_de_programacion.ipynb
@@ -279,22 +279,45 @@
    "source": [
     "### Tipos de datos.\n",
     "\n",
-    "\n",
     "Los tipos de datos son la base fundamental para organizar y manipular la información en los lenguajes de programación. Cierto tipo de dato define el tipo de valor que se puede manejar y las operaciones que se pueden realizar con ese tipo de dato.\n",
     "\n",
+    "#### Unidad de Información\n",
+    "Una unidad de información es una medida básica utilizada para medir la cantidad de datos o información. \n",
+    "Estas unidades son fundamentales en la informática y las telecomunicaciones, donde se utilizan para:\n",
+    "\n",
+    "- describir el tamaño de archivos \n",
+    "- la capacidad de almacenamiento\n",
+    "- la velocidad de transmisión de datos. \n",
+    "\n",
+    "Las unidades de información se basan en el concepto de bits, bytes y palabra, que son las unidades más fundamentales en la representación digital de la información.\n",
+    "\n",
+    "Principales unidades de información:\n",
+    "- Bit: Es la unidad más básica de información. Un bit puede representar dos estados posibles, típicamente 0 o 1. Se utiliza para representar la unidad mínima de información en un sistema binario.\n",
+    "- Byte: Un byte es un grupo de 8 bits. Es la unidad básica utilizada para medir el tamaño de archivos y la capacidad de almacenamiento.\n",
+    "- Palabra: Son grupos de bits que tienen un tamaño fijo. Es una unidad básica de datos que un procesador de computadora puede manejar y procesar como un único conjunto en una operación. La longitud de una palabra depende de la arquitectura del sistema, y suele estar relacionada con la cantidad de bits que la CPU puede procesar simultáneamente en una operación.\n",
+    "\n",
+    "Por ejemplo:\n",
+    "- En una arquitectura de 32 bits, la longitud de una palabra es de 32 bits (4 bytes).\n",
+    "- En una arquitectura de 64 bits, la longitud de una palabra es de 64 bits (8 bytes).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "En general, los tipos de datos se pueden clasificar en dos categorías principales:\n",
     "\n",
     "1. Tipos de datos primitivos:\n",
     "\n",
     "Los tipos de datos primitivos son los tipos de datos más básicos que ofrece un lenguaje de programación. Son indivisibles y solo pueden almacenar un único valor. Los tipos de datos primitivos más comunes incluyen:\n",
-    "| Categoría | Tipo de Dato | Descripción | Ejemplos |\n",
-    "| :---: | :---: | :--- | :---: |\n",
-    "| Tipo Numérico | Entero | Números enteros positivos, negativos o cero. Comprende un rango de valores aproximadamente de -9,223,372,036,854,775,808 a 9,223,372,036,854,775,807. | ```1, -10, 0, 200``` |\n",
-    "| Tipo Numérico | Float | Números de punto flotante. Comprende un rango de valores aproximadamente de ±1.79769313486231570E+308 (precisión de 15-16 dígitos decimales). | ```3.1416, -5.2, 10.0, 0.33``` |\n",
-    "| Tipo Numérico | Complejo | Números complejos. | ```4+3i, 8i``` |\n",
-    "| Tipo Texto | Carácter | Representan un único símbolo o letra. | ```'a', 'B', '$'``` |\n",
-    "| Tipo Texto | Cadena de Texto | Secuencias de caracteres. | ```\"Hola mundo\", \"Python es genial\", \"42\"``` |\n",
-    "| Tipo booleano | Booleano | Valores de verdad o falso. | ```True, False``` |\n",
+    "| Categoría | Tipo de Dato | Descripción | Ejemplos | Tamaño en bytes |\n",
+    "| :---: | :---: | :--- | :---: | :---: |\n",
+    "| Tipo Numérico | Entero | Números enteros positivos, negativos o cero. Comprende un rango de valores aproximadamente de -9,223,372,036,854,775,808 a 9,223,372,036,854,775,807. | ```1, -10, 0, 200``` | 4 u 8 |\n",
+    "| Tipo Numérico | Float | Números de punto flotante. Comprende un rango de valores aproximadamente de ±1.79769313486231570E+308 (precisión de 15-16 dígitos decimales). | ```3.1416, -5.2, 10.0, 0.33``` | 4 u 8 |\n",
+    "| Tipo Numérico | Complejo | Números complejos. | ```4+3i, 8i``` | 12 o 16 |\n",
+    "| Tipo Texto | Carácter | Representan un único símbolo o letra. | ```'a', 'B', '$'``` | 1 a 4 |\n",
+    "| Tipo Texto | Cadena de Texto | Secuencias de caracteres. | ```\"Hola mundo\", \"Python es genial\", \"42\"``` | Suma total de caracteres |\n",
+    "| Tipo booleano | Booleano | Valores de verdad o falso. | ```True, False``` | 1 |\n",
     "\n",
     "Aquí pueden informarse más acerca de los [números de punto flotante.](http://puntoflotante.org/formats/fp/)\n",
     "\n",
