Punto de control: Se corrige error en material de curso.

--- a/material_del_curso/elementos_de_programacion.ipynb
+++ b/material_del_curso/elementos_de_programacion.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align: center;\">\n",
-    "    <img src=\"../../images/banner.png\" alt=\"Banner curso\" style=\"width:80%\">\n",
+    "    <img src=\"../images/banner.png\" alt=\"Banner curso\" style=\"width:80%\">\n",
     "</div>"
    ]
   },
